k8s/vault/vault.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: vault
  namespace: default
spec:
  rules:
  - host: vault.example.com
    http:
      paths:
      - backend:
          serviceName: vault
          servicePort: 8200
        path: /
  tls:
  - hosts:
    - vault.example.com
    secretName: singtel5gplatform-com-cert
